--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,9 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+base64 = "0.13"
+chrono = "0.4"
+image = "0.24"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
