--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,9 @@ serde_json = "1"
 base64 = "0.13"
 chrono = "0.4"
 image = "0.24"
-candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.1" }
+candle-nn = "0.7.0"
+candle-core = "0.7.0"
+mnist = "0.6.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
