--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ candle-core = "0.7.0"
 mnist = "0.6.0"
 ndarray = "0.16.1"
 imageproc = "0.23"
+candle-datasets = "0.7.2"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
