--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.56.2",
     "@tauri-apps/api": "^1",
