--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.59.6",
     "@tauri-apps/api": "^1",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
